# rhipo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: curl.cmake
include/hip/: hip_version.h
include/hip/hcc_detail/: hip_prof_str.h
src/: CMakeLists.txt  base64.cc  base64.h  client.cc  client.h  curl.cc  curl.h  device.cc  elf.cc  elf.h  internal.cc  internal.h  kernel.cc  memory.cc  util.cc  util.h
